--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    // hdodenhof - circle view
+    implementation "de.hdodenhof:circleimageview:3.1.0"
 }
